--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -15,11 +15,11 @@
 # this must always be the first section:
 [Babelfish for T-SQL]
 # only Babelfish version numbers listed here can be referenced the rules below:
-valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0
+valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0
 # x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported), and are typically based on a newer PG release
 file_format=2                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Jun-2023                 # identifies the version of this file, together with the latest Babelfish version supported
-                                        # format: dd-MON-yyyy or MON-yyyy                                                                                                                                               
+file_timestamp=Oct-2023                 # identifies the version of this file, together with the latest Babelfish version supported
+                                        # format: dd-MON-yyyy or MON-yyyy                                                                                                                                                                                                                   
 
 # Basic principle: 
 #   - if a feature is not listed in this file, then it is supported by Babelfish
@@ -95,7 +95,7 @@ file_timestamp=Jun-2023                 # identifies the version of this file, t
 #
 
 # changes in file_format=2:
-# - support for ignored-x.y.z=value and ignored=x.y.z
+# - support for Ignored-x.y.z=value, ReviewSemantics-x.y.z=value 
 # - support for version_alias=x.y.z,a.b.c (not currently used)
 #
 
@@ -125,6 +125,7 @@ supported-1.0.0=0,102,132,133,134,135,136,141,142,153,155,180,217,219,220,232,26
 supported-1.2.0=201,206,2733,8144,8145,8146
 supported-2.1.0=213
 supported-2.2.0=911
+supported-3.3.0=15003
 report_group=@@ERROR codes
 
 [Regular variable named @@v]
@@ -230,6 +231,7 @@ supported-2.3.0=DATETIMEOFFSETFROMPARTS,TRY_CONVERT,FORMAT,JSON_MODIFY
 supported-2.4.0=ATN2,APP_NAME,STR,SESSION_CONTEXT,DATEDIFF_BIG,OBJECT_DEFINITION,OBJECT_SCHEMA_NAME
 supported-3.1.0=OPENQUERY
 supported-3.2.0=CONTEXT_INFO,ROWCOUNT_BIG,DATABASE_PRINCIPAL_ID,TIMEFROMPARTS,DATETIME2FROMPARTS
+supported-3.3.0=PARSENAME,EOMONTH,HOST_ID,SMALLDATETIMEFROMPARTS
 default_classification-ReviewSemantics=NEWSEQUENTIALID
 report_group-Filestream=FILETABLEROOTPATH,GETFILENAMESPACEPATH,GETPATHLOCATOR,PATHNAME
 report_group-Fulltext Search=CONTAINS,CONTAINSTABLE,FREETEXT,FREETEXTTABLE,SEMANTICKEYPHRASETABLE,SEMANTICSIMILARITYDETAILSTABLE,SEMANTICSIMILARITYTABLE,FULLTEXTCATALOGPROPERTY,FULLTEXTSERVICEPROPERTY
@@ -450,11 +452,12 @@ report_group=DDL
 rule=column_definition
 default_classification=ReviewPerformance
 report_group=DDL
-# Babelfish currently only supports the equivalent of persisted computed columns
+# Babelfish currently only supports the equivalent of persisted computed columnss
 
 [Features in computed columns]
 rule=column_definition
-list=SCALAR_UDF_CALL,XML_METHOD_CALL,HIERARCHYID_METHOD_CALL,RAND,GETDATE,GETUTCDATE,CURRENT_TIMESTAMP,STRING_CONCAT_PLUS,CONCAT,CAST(DATETIME),CONVERT(DATETIME)
+list=SCALAR_UDF_CALL,XML_METHOD_CALL,HIERARCHYID_METHOD_CALL,RAND,GETDATE,GETUTCDATE,CURRENT_TIMESTAMP,STRING_CONCAT_PLUS,CONCAT,CAST(DATETIME),CONVERT(DATETIME),REPLACE
+supported-3.3.0=REPLACE
 report_group=DDL
 
 [Scalar UDF in table DDL]
@@ -471,7 +474,7 @@ complexity_score=HIGH
 
 [DROP multiple objects]
 rule=drop_table,drop_view,drop_procedure,drop_function,drop_database
-list=TABLE,VIEW,PROCEDURE,FUNCTION,TRIGGER,DATABASE,INDEX
+list=TABLE,VIEW,PROCEDURE,FUNCTION,TRIGGER,DATABASE,INDEX,SEQUENCE
 supported-1.0.0=TABLE,VIEW,PROCEDURE,FUNCTION
 report_group=DDL
 complexity_score=LOW
@@ -624,6 +627,7 @@ list=EXTERNAL,ATOMIC NATIVELY COMPILED,ENCRYPTION,RECOMPILE,SCHEMABINDING,WITHOU
 supported-1.0.0=WITHOUT SCHEMABINDING
 supported-2.4.0=EXECUTE AS CALLER
 default_classification-ReviewSemantics=EXECUTE AS OWNER,EXECUTE AS CALLER
+default_classification-ReviewPerformance=RECOMPILE
 report_group=Procedures
 complexity_score-HIGH=EXTERNAL,ATOMIC NATIVELY COMPILED,ENCRYPTION
 complexity_score-LOW=RECOMPILE
@@ -632,6 +636,7 @@ complexity_score-LOW=RECOMPILE
 rule=execute_body
 list=RECOMPILE,RESULT SETS,RESULT SETS NONE,RESULT SETS UNDEFINED
 supported-1.0.0=RESULT SETS,RESULT SETS NONE,RESULT SETS UNDEFINED
+default_classification-ReviewPerformance=RECOMPILE
 complexity_score-LOW=RECOMPILE
 report_group=Procedures
 
@@ -664,6 +669,7 @@ complexity_score=LOW
 
 [EXECUTE SQL function]
 rule=execute_body
+supported-1.1.0=*
 report_group=Functions
 
 [Trigger options]
@@ -765,6 +771,7 @@ report_group=default
 
 [LIKE '[...]']
 rule=predicate 
+supported-3.3.0=*  
 report_group=Operators
 
 [SELECT TOP without ORDER BY]  
@@ -953,7 +960,7 @@ rule=collation
 # generally, not supported are %_ws,%_ks,%_vs,%_sc
 supported-1.0.0=ARABIC_CS_AS,ARABIC_CI_AI,ARABIC_CI_AS,CHINESE_PRC_CS_AS,CHINESE_PRC_CI_AI,CHINESE_PRC_CI_AS,CYRILLIC_GENERAL_CS_AS,CYRILLIC_GENERAL_CI_AI,CYRILLIC_GENERAL_CI_AS,FINNISH_SWEDISH_CS_AS,FINNISH_SWEDISH_CI_AS,FINNISH_SWEDISH_CI_AI,FRENCH_CS_AS,FRENCH_CI_AS,FRENCH_CI_AI,KOREAN_WANSUNG_CS_AS,KOREAN_WANSUNG_CI_AS,KOREAN_WANSUNG_CI_AI,LATIN1_GENERAL_BIN2,LATIN1_GENERAL_90_BIN2,LATIN1_GENERAL_100_BIN2,LATIN1_GENERAL_140_BIN2,LATIN1_GENERAL_CI_AI,LATIN1_GENERAL_CI_AS,LATIN1_GENERAL_CS_AI,LATIN1_GENERAL_CS_AS,MODERN_SPANISH_CS_AS,MODERN_SPANISH_CI_AS,MODERN_SPANISH_CI_AI,POLISH_CS_AS,POLISH_CI_AS,POLISH_CI_AI,SQL_LATIN1_GENERAL_CP1250_CI_AS,SQL_LATIN1_GENERAL_CP1250_CS_AS,SQL_LATIN1_GENERAL_CP1251_CI_AS,SQL_LATIN1_GENERAL_CP1251_CS_AS,SQL_LATIN1_GENERAL_CP1_CI_AI,SQL_LATIN1_GENERAL_CP1_CI_AS,SQL_LATIN1_GENERAL_CP1_CI_AI,SQL_LATIN1_GENERAL_CP1_CS_AS,SQL_LATIN1_GENERAL_PREF_CP1_CS_AS,SQL_LATIN1_GENERAL_CP1253_CI_AS,SQL_LATIN1_GENERAL_CP1253_CS_AS,SQL_LATIN1_GENERAL_CP1254_CI_AS,SQL_LATIN1_GENERAL_CP1254_CS_AS,SQL_LATIN1_GENERAL_CP1255_CI_AS,SQL_LATIN1_GENERAL_CP1255_CS_AS,SQL_LATIN1_GENERAL_CP1256_CI_AS,SQL_LATIN1_GENERAL_CP1256_CS_AS,SQL_LATIN1_GENERAL_CP1257_CI_AS,SQL_LATIN1_GENERAL_CP1257_CS_AS,SQL_LATIN1_GENERAL_CP1258_CI_AS,SQL_LATIN1_GENERAL_CP1258_CS_AS,THAI_CS_AS,THAI_CI_AS,THAI_CI_AI,TRADITIONAL_SPANISH_CS_AS,TRADITIONAL_SPANISH_CI_AS,TRADITIONAL_SPANISH_CI_AI,TURKISH_CS_AS,TURKISH_CI_AS,TURKISH_CI_AI,UKRAINIAN_CS_AS,UKRAINIAN_CI_AS,UKRAINIAN_CI_AI,VIETNAMESE_CS_AS,VIETNAMESE_CI_AS,VIETNAMESE_CI_AI
 supported-2.1.0=JAPANESE_CS_AS,JAPANESE_CI_AI,JAPANESE_CI_AS
-supported-2.2.0=DATABASE_DEFAULT
+supported-2.2.0=DATABASE_DEFAULT,'ESTONIAN_CI_AI','ESTONIAN_CI_AS','ESTONIAN_CS_AS','GREEK_CI_AI','GREEK_CI_AS','GREEK_CS_AS','HEBREW_CI_AI','HEBREW_CI_AS','HEBREW_CS_AS','MONGOLIAN_CI_AI','MONGOLIAN_CI_AS','MONGOLIAN_CS_AS','SQL_LATIN1_GENERAL_CP874_CI_AS','SQL_LATIN1_GENERAL_CP874_CS_AS'
 complexity_score=LOW
 
 [Case-sensitive collation]
@@ -973,6 +980,7 @@ supported-2.3.0=all_parameters
 supported-2.4.0=partitions,systypes
 supported-3.1.0=linked_logins,servers
 supported-3.2.0=sysusers,syslogins
+supported-3.3.0=extended_properties
 
 [INFORMATION_SCHEMA]
 rule=full_object_name
@@ -996,6 +1004,7 @@ supported-2.3.0=sp_helpdbfixedrole,sp_addrole,sp_droprole,sp_addrolemember,sp_dr
 supported-2.4.0=sp_set_session_context,sp_rename 
 supported-3.1.0=sp_linkedservers,sp_addlinkedserver,sp_dropserver,sp_addlinkedsrvlogin,sp_helplinkedsrvlogin,sp_droplinkedsrvlogin
 supported-3.2.0=sp_serveroption
+supported-3.3.0=sp_testlinkedserver,sp_enum_oledb_providers,sp_addextendedproperty,sp_updateextendedproperty,sp_dropextendedproperty
 default_classification-ReviewManually=sp_db_vardecimal_storage_format,sp_fulltext_database
 report_group-XML=sp_xml_preparedocument,sp_xml_removedocument,sp_xml_schema_rowset,sp_xml_schema_rowset2
 report_group-Distributed Transactions(XA)=sp_sqljdbc_xa_install,sp_sqljdbc_xa_uninstall,sp_sqljdbc_xa_internal_remove,sp_xa_commit,sp_xa_end,sp_xa_forget,sp_xa_forget_ex,sp_xa_init,sp_xa_init_ex,sp_xa_prepare,sp_xa_prepare_ex,sp_xa_recover,sp_xa_rollback,sp_xa_rollback_ex,sp_xa_start,xp_sqljdbc_xa_commit,xp_sqljdbc_xa_end,xp_sqljdbc_xa_forget,xp_sqljdbc_xa_forget_ex,xp_sqljdbc_xa_init,xp_sqljdbc_xa_init_ex,xp_sqljdbc_xa_prepare,xp_sqljdbc_xa_prepare_ex,xp_sqljdbc_xa_recover,xp_sqljdbc_xa_rollback,xp_sqljdbc_xa_rollback_ex,xp_sqljdbc_xa_start
@@ -1006,6 +1015,11 @@ complexity_score-LOW=sp_addextendedproperty
 rule=execute_body
 supported-3.2.0=arg2=QUERY TIMEOUT
 complexity_score=HIGH
+
+[Extended property type]
+rule=execute_body
+supported-3.3.0=SCHEMA,TABLE,COLUMN,VIEW,SEQUENCE,PROCEDURE,FUNCTION,TYPE
+complexity_score=LOW
 
 [System Functions]
 rule=function_call
@@ -1226,7 +1240,7 @@ supported-1.0.0=*
 rule=set_special
 list=0,NONZERO,VARIABLE
 supported-1.0.0=0    
-supported-3.2.0=NONZERO,VARIABLE
+supported-3.2.0=NONZERO
 
 [SET TRANSACTION ISOLATION LEVEL]
 rule=set_special
@@ -1486,7 +1500,7 @@ complexity_score=HIGH
 
 [Syntax Issues]
 rule=update_statement,delete_statement
-list=UPDATE TABVAR VIA CORRELATION IN FUNCTION,DELETE TABVAR VIA CORRELATION IN FUNCTION,UPDATE CORRELATION SET UNQUALIFIED COLUMN,UPDATE QUALIFIED SET COLUMN
+list=UPDATE TABVAR VIA CORRELATION IN FUNCTION,DELETE TABVAR VIA CORRELATION IN FUNCTION,UPDATE CORRELATION SET UNQUALIFIED COLUMN,UPDATE QUALIFIED SET COLUMN,NO COMMA COLUMN TABCONSTRAINT
 supported-2.4.0=UPDATE CORRELATION SET UNQUALIFIED COLUMN,UPDATE QUALIFIED SET COLUMN
 supported-3.2.0=UPDATE TABVAR VIA CORRELATION IN FUNCTION,DELETE TABVAR VIA CORRELATION IN FUNCTION
 report_group=Syntax Issues
@@ -1508,5 +1522,5 @@ rule=sqlcmd_variable
 default_classification=ReviewManually
 
 #-----------------------------------------------------------------------------------
-#file checksum=c6e38e7c
+#file checksum=fca8d845
 #--- end ---------------------------------------------------------------------------
