--- a/BabelfishCompassUser.Optimistic.cfg
+++ b/BabelfishCompassUser.Optimistic.cfg
@@ -3,7 +3,7 @@
 #
 # Version
 # -------
-# Distributed with Compass v.2023-06
+# Distributed with Compass v.2023-12
 #
 # What is this file?
 # ------------------
@@ -817,4 +817,20 @@ default_classification=Ignored
 
 [Extended property type]
 
-# end
+
+[Datetime converted to (VAR)BINARY]
+
+
+[Binary representation of datetime]
+
+
+[SELECT..INTO]
+
+
+[NUMERIC datatype for IDENTITY]
+
+
+[User-defined datatype for IDENTITY]
+
+
+
