--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -15,10 +15,10 @@
 # this must always be the first section:
 [Babelfish for T-SQL]
 # only Babelfish version numbers listed here can be referenced the rules below:
-valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0
+valid_versions=1.0.0, 1.1.0, 1.2.0, 1.3.0, 1.4.0, 1.5.0, 1.6.0, 2.1.0, 2.2.0, 2.3.0, 2.4.0, 2.5.0, 3.1.0, 3.2.0, 3.3.0, 3.4.0
 # x.y.1/2/3 etc are bugfix releases for x.y.0 (no new T-SQL features supported), and are typically based on a newer PG release
 file_format=2                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Oct-2023                 # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Dec-2023                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy                                                                                                                                                                                                                   
 
 # Basic principle: 
@@ -126,6 +126,7 @@ supported-1.2.0=201,206,2733,8144,8145,8146
 supported-2.1.0=213
 supported-2.2.0=911
 supported-3.3.0=15003
+supported-3.4.0=330,6615
 report_group=@@ERROR codes
 
 [Regular variable named @@v]
@@ -145,6 +146,7 @@ report_group-XML=XML,XML(xmlschema),XML COLUMN_SET FOR ALL_SPARSE_COLUMNS
 report_group-Cursors=CURSOR
 report_group-Geospatial=GEOGRAPHY,GEOMETRY
 complexity_score=HIGH
+complexity_score-LOW=CHARACTER VARYING,NATIONAL CHARACTER,NATIONAL CHARACTER VARYING,NCHARACTER,NCHARACTER VARYING
 
 [TIMESTAMP column without column name]
 rule=column_definition
@@ -161,6 +163,17 @@ rule=column_definition
 rule=column_definition
 supported-1.0.0=18
 report_group=Datatypes
+complexity_score=LOW
+
+[NUMERIC datatype for IDENTITY]
+rule=id
+list=CREATE TABLE,ALTER TABLE,IDENTITY()
+complexity_score=LOW
+default_classification=ReviewSemantics
+
+[User-defined datatype for IDENTITY]
+rule=id
+list=CREATE TABLE,ALTER TABLE,IDENTITY(),IDENTITY(TINYINT)
 complexity_score=LOW
 
 [SQL graph]
@@ -184,6 +197,7 @@ list=EXIST,MODIFY,VALUE,QUERY,NODES,SELECT FOR XML AUTO,SELECT FOR XML AUTO ELEM
 report_group=XML
 supported-1.0.0=SELECT FOR XML PATH,SELECT FOR XML RAW
 complexity_score=HIGH
+complexity_score-MEDIUM=EXIST,VALUE,QUERY,NODES
 
 [JSON features]
 rule=for_clause
@@ -232,10 +246,11 @@ supported-2.4.0=ATN2,APP_NAME,STR,SESSION_CONTEXT,DATEDIFF_BIG,OBJECT_DEFINITION
 supported-3.1.0=OPENQUERY
 supported-3.2.0=CONTEXT_INFO,ROWCOUNT_BIG,DATABASE_PRINCIPAL_ID,TIMEFROMPARTS,DATETIME2FROMPARTS
 supported-3.3.0=PARSENAME,EOMONTH,HOST_ID,SMALLDATETIMEFROMPARTS
+supported-3.4.0=SWITCHOFFSET,TODATETIMEOFFSET,COL_NAME,COL_LENGTH,DATETRUNC,IDENTITY,TYPE_ID,TYPE_NAME
 default_classification-ReviewSemantics=NEWSEQUENTIALID
 report_group-Filestream=FILETABLEROOTPATH,GETFILENAMESPACEPATH,GETPATHLOCATOR,PATHNAME
 report_group-Fulltext Search=CONTAINS,CONTAINSTABLE,FREETEXT,FREETEXTTABLE,SEMANTICKEYPHRASETABLE,SEMANTICSIMILARITYDETAILSTABLE,SEMANTICSIMILARITYTABLE,FULLTEXTCATALOGPROPERTY,FULLTEXTSERVICEPROPERTY
-report_group-Encryption=ENCRYPTBYASYMKEY,ENCRYPTBYCERT,ENCRYPTBYKEY,ENCRYPTBYPASSPHRASE,PWDCOMPARE,PWDENCRYPT,DECRYPTBYASYMKEY,DECRYPTBYCERT,DECRYPTBYKEY,DECRYPTBYKEYAUTOASYMKEY,DECRYPTBYKEYAUTOCERT,DECRYPTBYPASSPHRASE,DECRYPTBYKEYAUTOCERT,CERT_ID,KEY_GUID,KEY_ID,KEY_NAME,ASYMKEYPROPERTY,CERTPROPERTY,CRYPT_GEN_RANDOM,SIGNBYASYMKEY,SIGNBYCERT,SYMKEYPROPERTY,VERIFYSIGNEDBYCERT,VERIFYSIGNEDBYASYMKEY   
+report_group-Encryption/Security=ENCRYPTBYASYMKEY,ENCRYPTBYCERT,ENCRYPTBYKEY,ENCRYPTBYPASSPHRASE,PWDCOMPARE,PWDENCRYPT,DECRYPTBYASYMKEY,DECRYPTBYCERT,DECRYPTBYKEY,DECRYPTBYKEYAUTOASYMKEY,DECRYPTBYKEYAUTOCERT,DECRYPTBYPASSPHRASE,DECRYPTBYKEYAUTOCERT,CERT_ID,KEY_GUID,KEY_ID,KEY_NAME,ASYMKEYPROPERTY,CERTPROPERTY,CRYPT_GEN_RANDOM,SIGNBYASYMKEY,SIGNBYCERT,SYMKEYPROPERTY,VERIFYSIGNEDBYCERT,VERIFYSIGNEDBYASYMKEY   
 report_group-XML=OPENXML
 report_group-Triggers=EVENTDATA,COLUMNS_UPDATED,UPDATE
 report_group-Transactions=CURRENT_TRANSACTION_ID
@@ -299,6 +314,7 @@ report_group=Built-in functions
 
 [expression AT TIME ZONE]
 rule=expression
+supported-3.4.0=*
 
 [Variable aggregates across rows]
 rule=update_statement,select_statement
@@ -340,17 +356,28 @@ rule=function_call
 list=DATEADD,DATEDIFF,DATEPART,DATENAME,CAST,TRY_CAST,CONVERT,TRY_CONVERT
 supported-2.2.0=CAST
 supported-3.2.0=TRY_CAST,CONVERT,TRY_CONVERT,DATEADD,DATEDIFF,DATEPART,DATENAME
+report_group=Numeric/Binary representation of datetime
 
 [Numeric assignment to datetime variable/parameter/column]
 rule=set_statement,select_list_elem,declare_local,procedure_param,column_definition
-report_group=Numeric representation of datetime
+report_group=Numeric/Binary representation of datetime
 supported-3.2.0=*
 
 [Datetime converted to numeric]
 rule=function_call
 list=CAST,TRY_CAST,CONVERT,TRY_CONVERT
-report_group=Numeric representation of datetime
+supported-3.4.0=CAST,CONVERT
+report_group=Numeric/Binary representation of datetime
 
+[Datetime converted to (VAR)BINARY]
+rule=function_call
+list=CAST,TRY_CAST,CONVERT,TRY_CONVERT
+report_group=Numeric/Binary representation of datetime
+
+[Binary representation of datetime]
+rule=function_call
+list=CAST,TRY_CAST,CONVERT,TRY_CONVERT
+report_group=Numeric/Binary representation of datetime
 
 #--- tables/columns -----
 
@@ -475,7 +502,7 @@ complexity_score=HIGH
 [DROP multiple objects]
 rule=drop_table,drop_view,drop_procedure,drop_function,drop_database
 list=TABLE,VIEW,PROCEDURE,FUNCTION,TRIGGER,DATABASE,INDEX,SEQUENCE
-supported-1.0.0=TABLE,VIEW,PROCEDURE,FUNCTION
+supported-1.0.0=TABLE,VIEW,PROCEDURE,FUNCTION,SEQUENCE
 report_group=DDL
 complexity_score=LOW
 
@@ -594,7 +621,7 @@ list=SCHEMABINDING,WITHOUT SCHEMABINDING,ENCRYPTION,VIEW_METADATA,CHECK OPTION
 supported-1.0.0=SCHEMABINDING
 default_classification-ReviewSemantics=WITHOUT SCHEMABINDING
 report_group=Views
-complexity_score-HIGH=ENCRYPTION
+complexity_score-HIGH=Encryption/Security
 complexity_score-LOW=SCHEMABINDING,WITHOUT SCHEMABINDING
 
 [Indexed view]
@@ -694,11 +721,13 @@ complexity_score=LOW
 
 [ENABLE TRIGGER]
 rule=enable_trigger
+supported-3.4.0=*
 report_group=Triggers
 complexity_score=LOW
 
 [DISABLE TRIGGER]
 rule=disable_trigger
+supported-3.4.0=*
 report_group=Triggers
 complexity_score=LOW
 
@@ -744,12 +773,14 @@ report_group=Databases
 rule=char_string
 list=STRING,EMBEDDED_DOUBLE_QUOTE,EMBEDDED_SINGLE_QUOTE
 supported-1.0.0=STRING
+supported-3.4.0=EMBEDDED_DOUBLE_QUOTE,EMBEDDED_SINGLE_QUOTE
 report_group=default
 complexity_score=LOW
 
 [Unquoted string]
 rule=execute_parameter,procedure_param
 list=PARAMETER VALUE,PARAMETER DEFAULT
+supported-3.4.0=*
 report_group=default
 complexity_score=LOW
 
@@ -886,7 +917,8 @@ complexity_score=LOW
 
 [NEXT VALUE FOR context]
 rule=function_call
-list=DECLARE @v,SET @v,IF,WHILE,OVER()
+list=DECLARE @v,SET @v,IF,WHILE,OVER(),DOTDOT
+supported-3.4.0=DECLARE @v,SET @v
 report_group=Built-in functions
 complexity_score=LOW
     
@@ -917,10 +949,11 @@ report_group=Cursors
 
 [DBA statements]
 rule=backup_statement,restore_statement,kill_statement,reconfigure_statement,shutdown_statement
-list=BACKUP,RESTORE,KILL,RECONFIGURE,SHUTDOWN,BACKUP SYMMETRIC KEY,BACKUP MASTER KEY,BACKUP SERVICE MASTER KEY,BACKUP CERTIFICATE,RESTORE SYMMETRIC KEY,RESTORE MASTER KEY,RESTORE SERVICE MASTER KEY
+list=BACKUP,RESTORE,KILL,KILL SPID,RECONFIGURE,SHUTDOWN,BACKUP SYMMETRIC KEY,BACKUP MASTER KEY,BACKUP SERVICE MASTER KEY,BACKUP CERTIFICATE,RESTORE SYMMETRIC KEY,RESTORE MASTER KEY,RESTORE SERVICE MASTER KEY
+supported-3.4.0=KILL SPID
 report_group=default
-report_group-Encryption=BACKUP SYMMETRIC KEY,BACKUP MASTER KEY,BACKUP SERVICE MASTER KEY,RESTORE SYMMETRIC KEY,RESTORE MASTER KEY,RESTORE SERVICE MASTER KEY
-report_group-Security=BACKUP CERTIFICATE
+report_group-Encryption/Security=BACKUP SYMMETRIC KEY,BACKUP MASTER KEY,BACKUP SERVICE MASTER KEY,RESTORE SYMMETRIC KEY,RESTORE MASTER KEY,RESTORE SERVICE MASTER KEY
+report_group-Encryption/Security=BACKUP CERTIFICATE
 complexity_score=HIGH
 complexity_score-LOW=RECONFIGURE
 complexity_score-MEDIUM=KILL,SHUTDOWN,BACKUP,RESTORE
@@ -930,6 +963,7 @@ rule=alter_server_configuration
 complexity_score=HIGH
 
 [DBCC statements]
+supported-3.4.0=CHECKIDENT
 rule=dbcc_statement
 
 [Traceflags]
@@ -981,6 +1015,7 @@ supported-2.4.0=partitions,systypes
 supported-3.1.0=linked_logins,servers
 supported-3.2.0=sysusers,syslogins
 supported-3.3.0=extended_properties
+supported-3.4.0=database_permissions,server_role_members
 
 [INFORMATION_SCHEMA]
 rule=full_object_name
@@ -1005,15 +1040,17 @@ supported-2.4.0=sp_set_session_context,sp_rename
 supported-3.1.0=sp_linkedservers,sp_addlinkedserver,sp_dropserver,sp_addlinkedsrvlogin,sp_helplinkedsrvlogin,sp_droplinkedsrvlogin
 supported-3.2.0=sp_serveroption
 supported-3.3.0=sp_testlinkedserver,sp_enum_oledb_providers,sp_addextendedproperty,sp_updateextendedproperty,sp_dropextendedproperty
+supported-3.4.0=sp_who,sp_changedbowner
 default_classification-ReviewManually=sp_db_vardecimal_storage_format,sp_fulltext_database
 report_group-XML=sp_xml_preparedocument,sp_xml_removedocument,sp_xml_schema_rowset,sp_xml_schema_rowset2
 report_group-Distributed Transactions(XA)=sp_sqljdbc_xa_install,sp_sqljdbc_xa_uninstall,sp_sqljdbc_xa_internal_remove,sp_xa_commit,sp_xa_end,sp_xa_forget,sp_xa_forget_ex,sp_xa_init,sp_xa_init_ex,sp_xa_prepare,sp_xa_prepare_ex,sp_xa_recover,sp_xa_rollback,sp_xa_rollback_ex,sp_xa_start,xp_sqljdbc_xa_commit,xp_sqljdbc_xa_end,xp_sqljdbc_xa_forget,xp_sqljdbc_xa_forget_ex,xp_sqljdbc_xa_init,xp_sqljdbc_xa_init_ex,xp_sqljdbc_xa_prepare,xp_sqljdbc_xa_prepare_ex,xp_sqljdbc_xa_recover,xp_sqljdbc_xa_rollback,xp_sqljdbc_xa_rollback_ex,xp_sqljdbc_xa_start
 complexity_score=HIGH
-complexity_score-LOW=sp_addextendedproperty
+complexity_score-LOW=sp_addextendedproperty,sp_addtype,sp_addlogin,sp_droplogin,sp_adduser,sp_dropuser,sp_password,sp_addrolemember,sp_droprolemember,sp_addsrvrolemember,sp_dropsrvrolemember,sp_xml_preparedocument,sp_xml_removedocument
 
 [sp_serveroption]
 rule=execute_body
 supported-3.2.0=arg2=QUERY TIMEOUT
+supported-3.3.0=arg2=CONNECT TIMEOUT
 complexity_score=HIGH
 
 [Extended property type]
@@ -1048,6 +1085,7 @@ report_group=Permissions
 
 [ALTER AUTHORIZATION]
 rule=alter_authorization
+supported-3.4.0=DATABASE
 report_group=Permissions
 
 [EXECUTE AS]
@@ -1063,18 +1101,20 @@ complexity_score=HIGH
 
 [OPEN KEY]
 rule=open_key
-report_group=Encryption
+report_group=Encryption/Security
 complexity_score=HIGH
 
 [CLOSE KEY]
 rule=close_key
-report_group=Encryption
+report_group=Encryption/Security
 complexity_score=HIGH
 
 #--- DML -----
 
 [SELECT..PIVOT]
 rule=pivot_clause
+list=PIVOT,VIEW,CTE,JOIN
+supported-3.4.0=PIVOT
 report_group=DML
 
 [SELECT..UNPIVOT]
@@ -1096,6 +1136,12 @@ rule=top_clause
 supported-3.2.0=*
 report_group=DML
 
+[SELECT..INTO]
+rule=query_specification
+list=NO TOP NO IDENTITY ORDER BY,IDENTITY NOT LAST COLUMN
+report_group=DML
+default_classification=ReviewSemantics
+
 [Lateral join]
 rule=table_source_item
 list=CROSS APPLY,OUTER APPLY
@@ -1107,7 +1153,7 @@ complexity_score=HIGH
 rule=comparison_operator
 list=LEFT OJ,RIGHT OJ
 report_group=Operators
-complexity_score=HIGH
+complexity_score=MEDIUM
 
 [Comparison operator]
 rule=comparison_operator
@@ -1241,11 +1287,13 @@ rule=set_special
 list=0,NONZERO,VARIABLE
 supported-1.0.0=0    
 supported-3.2.0=NONZERO
+supported-3.4.0=VARIABLE
 
 [SET TRANSACTION ISOLATION LEVEL]
 rule=set_special
 report_group=Transactions
 supported-1.0.0=READ COMMITTED,READ UNCOMMITTED,SNAPSHOT
+supported-3.4.0=SERIALIZABLE,REPEATABLE READ
 complexity_score=HIGH
 default_classification=ReviewSemantics
 
@@ -1405,8 +1453,9 @@ report_group=Users
 
 [User options]
 rule=create_user,alter_user
-list=DEFAULT_SCHEMA,ALLOW_ENCRYPTED_VALUE_MODIFICATIONS,FOR LOGIN,WITHOUT LOGIN,FROM CERTIFICATE,FROM ASYMMETRIC KEY,WITH LOGIN,WITH NAME,DEFAULT_LANGUAGE,PASSWORD,OLD_PASSWORD
-supported-1.2.0=FOR LOGIN,DEFAULT_SCHEMA
+list=DEFAULT_SCHEMA,ALLOW_ENCRYPTED_VALUE_MODIFICATIONS,FOR LOGIN,FROM LOGIN,WITHOUT LOGIN,FROM CERTIFICATE,FROM ASYMMETRIC KEY,WITH LOGIN,WITH NAME,DEFAULT_LANGUAGE,PASSWORD,OLD_PASSWORD
+supported-1.2.0=FOR LOGIN,FROM LOGIN,DEFAULT_SCHEMA
+supported-3.4.0=WITH LOGIN
 report_group=Users
 
 [CREATE ROLE]
@@ -1477,11 +1526,10 @@ supported-1.0.0=SEQUENCE,LOGIN
 supported-1.2.0=USER
 supported-2.1.0=ROLE
 report_group-DDL=SEQUENCE,SYNONYM,DEFAULT,RULE
-report_group-Security=CERTIFICATE,CREDENTIAL,DATABASE SCOPED CREDENTIAL,CONTRACT,SERVER AUDIT SPECIFICATION,SERVER AUDIT
 report_group-Users=LOGIN,SERVER ROLE,ROLE
 report_group-Fulltext Search=FULLTEXT CATALOG,FULLTEXT INDEX,FULLTEXT STOPLIST
 report_group-Service Broker=ROUTE,QUEUE,SERVICE,MESSAGE TYPE,REMOTE SERVICE BINDING
-report_group-Encryption=ASYMMETRIC KEY,COLUMN ENCRYPTION KEY,COLUMN MASTER KEY,MASTER KEY,SERVICE MASTER KEY,SYMMETRIC KEY,CRYPTOGRAPHIC PROVIDER
+report_group-Encryption/Security=ASYMMETRIC KEY,COLUMN ENCRYPTION KEY,COLUMN MASTER KEY,MASTER KEY,SERVICE MASTER KEY,SYMMETRIC KEY,CRYPTOGRAPHIC PROVIDER,CERTIFICATE,CREDENTIAL,DATABASE SCOPED CREDENTIAL,CONTRACT,SERVER AUDIT SPECIFICATION,SERVER AUDIT
 report_group=default
 complexity_score=HIGH
 complexity_score-MEDIUM=RULE,DEFAULT,SYNONYM
@@ -1522,5 +1570,5 @@ rule=sqlcmd_variable
 default_classification=ReviewManually
 
 #-----------------------------------------------------------------------------------
-#file checksum=fca8d845
+#file checksum=d6650fbb
 #--- end ---------------------------------------------------------------------------
