Added DEFAULT parameters as supported in 3.4.0

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -634,9 +634,10 @@ report_group=Views
 
 [Parameter value DEFAULT]
 rule=execute_parameter,function_call
-list=procedure,function
-report_group-Procedures=procedure
-report_group-Functions=function
+list=PROCEDURE,FUNCTION
+supported-3.4.0=PROCEDURE,FUNCTION
+report_group-Procedures=PROCEDURE
+report_group-Functions=FUNCTION
 
 [Maximum parameters per procedure]
 rule=create_or_alter_procedure
@@ -1570,5 +1571,5 @@ rule=sqlcmd_variable
 default_classification=ReviewManually
 
 #-----------------------------------------------------------------------------------
-#file checksum=d6650fbb
+#file checksum=1a97666b
 #--- end ---------------------------------------------------------------------------
