Support for Babelfish v4.0.0

--- a/BabelfishCompassUser.Optimistic.cfg
+++ b/BabelfishCompassUser.Optimistic.cfg
@@ -833,4 +833,15 @@ default_classification=Ignored
 [User-defined datatype for IDENTITY]
 
 
+[DROP SIGNATURE]
 
+
+[ADD SENSITIVITY CLASSIFICATION]
+
+
+[DROP SENSITIVITY CLASSIFICATION]
+
+[FULLTEXT INDEX]
+
+
+[FULLTEXT CONTAINS]
